Resultados Hall e LED OK

--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -653,12 +653,10 @@ Independente da resistência elétrica dos fios, considerando que a impedância 
 \todo{calcular a incerteza de TODAS medidas}
 
 \section{Sensor de Efeito Hall Linear}
-
+Com o uso da interface apresentada na Figura \ref{fig:labview-hall}, efetuou-se o teste utilizando-se um ímã de um alto-falante. Verificou-se que o \textit{LED} contido na interface acendia-se com a proximidade do ímã ao Sensor de Efeito Hall. Essa condição coincide com o acendimento de um \textit{LED} contido na placa do módulo utilizado, indicando o seu funcionamento.
 
 \section{Módulo Sensor LED}
-Baseada a metodologia mencioanda na seção 2.2.2, foi feita a conexão dos fios  entre o sensor \textit{LED} com a placa de aquisição DAQ. Testou-se acionando os botôes que estão no painel frontal do diagrama mostrado na Figura \ref{fig:labview-led}. Dessa forma, foi verifado que o \textit{LED} vermelho acendia como estava esperado. Porém o \textit{LED} amarelo não acionou mesmo com botão do programa de LabVIEW ligado. Depois de algumas verificações do sensor, conclui-se que o \textit{LED} amarelo do sensor estava queimado devido ao uso indevido antes deste experimento.
-
-
+Baseada na metodologia mencioanda na seção 2.2.2, foi feita a conexão dos fios  entre o sensor \textit{LED} e a placa DAQ. Testou-se, acionando os botões que estão no painel do diagrama mostrado na Figura \ref{fig:labview-led}. Dessa forma, foi verifado que o \textit{LED} vermelho acendia, como estava esperado. Porém o \textit{LED} amarelo não acionou, mesmo com botão do programa de LabVIEW ligado. Depois de algumas verificações do sensor, conclui-se que o \textit{LED} amarelo do sensor estava queimado devido ao uso indevido antes deste experimento, já que as tensões nos pinos da DAQ estavam correspondendo corretamente aos comandos dados na interface do LabVIEW.
 
 \chapter{Conclusões}
 
