Mais alguns pequenos ajustes

--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -243,7 +243,7 @@ onde $\theta$ é a inclinação do pêndulo em radianos, $V^{-1}(\theta)$ é a i
 
 Para que seja possível comparar os resultados obtidos com e sem o circuito condicionador, é imprescindível que sejam extraídas as funções de transferências equivalentes do pêndulo nas duas situações.
 
-Para extrair a função de transferência experimental do pêndulo sem condicionamento, foi utilizado um multímetro digital Minipa ET-2082B com as especificações de precisão informadas pelo fabricante apresentada na Tabela \ref{tab:precisão-multimetro}. A coluna da precisão é apresentada na forma: $\pm$ (a$\%$ leitura + b dígitos), garantido por 1 ano. Como equipamento já tem mais de um ano de uso sem calibragem, esses dados não são totalmente fidedígnos.
+Para extrair a função de transferência experimental do pêndulo sem condicionamento, foi utilizado um multímetro digital Minipa ET-2082B com as especificações de precisão informadas pelo fabricante apresentada na Tabela \ref{tab:precisão-multimetro}. A coluna da precisão é apresentada na forma: $\pm$ (a$\%$ leitura + b dígitos), garantido por 1 ano. Como equipamento já tem mais de um ano de uso sem calibragem, esses dados não são totalmente fidedígnos. Foi utilizada a faixa de $20 V$.
 
 
 \begin{table}[H]
@@ -549,7 +549,7 @@ Para melhor visualizar o espectro, pode-se truncar o gráfico da Figura \ref{fig
 
 Na Figura \ref{fig:pendulo-frequencia-truncado}, é possível observar a componente espectral de $0.9$ $Hz$ no pêndulo. Esta componente também é claramente visível na curva temporal da Figura \ref{fig:pendulo-curva-tensao-vs-tempo} onde o período da oscilação é de $1.1$ segundos, que correspondem ao valor de $0.9$ $Hz$.
 
-As demais componentes contidas entre $0.1 Hz$ e $0.8 Hz$ são responsáveis pelo efeito de amortecimento do pêndulo, 
+As demais componentes contidas entre $0.1 Hz$ e $0.8 Hz$ são responsáveis pelo efeito de amortecimento do pêndulo.
 
 \subsection{Medição a 3 fios}
 
