--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -408,13 +408,13 @@ onde $\theta$ é o ângulo de inclinação do pêndulo e $V$ é a tensão elétr
 \end{table}
 
 O ajuste de curvas foi realizado com erro de linearidade dado conforme a Equação \ref{eq:pendulo-sem-cond-rsquared}
-
+%
 \begin{equation}
 	R^2 = 0.998
 	\label{eq:pendulo-sem-cond-rsquared}
 \end{equation}
-
-De forma gráfica, os pontos medidos apresentados na Tabela \ref{tab:pendulo-calibracao} e a função de transferência da Equação \ref{eq:pendulo-tf-sem-cond} ajustada pode ser visualizada na Figura \ref{fig:pendulo-tf-sem-cond}
+%
+De forma gráfica, os pontos medidos apresentados na Tabela \ref{tab:pendulo-calibracao} e a função de transferência da Equação \ref{eq:pendulo-tf-sem-cond} ajustada pode ser visualizada na Figura \ref{fig:pendulo-tf-sem-cond}. Note-se que as medidas de tensâo elétrica em função do ângiulo da inclinação do pêndulo possui uma relação linear. Tal relação cabe-se concluir que o uso do sensor potenciométrico pode medir o ângulo da inclinção do pêendulo com precisão.
 
 \begin{figure}[]
 \centering
@@ -488,6 +488,8 @@ De forma gráfica, os pontos medidos na Tabela \ref{tab:pendulo-calibracao-condi
 \caption{Gráfico exibindo a função de transferência ajustada(linha contínua) sobreposta às medidas experimentais(pontos)}
 \label{fig:pendulo-tf-com-cond}
 \end{figure}
+
+Note-se que houve alguns pontos de medida da tensão elétrica que apresentam grande erro relativo na medida, uma vez que a inclusão do circuito condicionador pode-se influenciar nessas medidas. Por exemplo, nos pequenos ângulos da inclinação do pêndulo, a tensâo elétrica medida deveria ser valores próximos a zero, porém, observando a Figura \ref{fig:pendulo-tf-com-cond}, isso não ocorreu. Um dos possíveis explicação deste fato é que todos amplificadores operacionais possuem as tensões elétricas de \textit{offset}. Isso faz com que, mesmo a tensão elétrica medido em potenciômetro seja idealmente zero, mede-se na saída do circuito de condiocionador, a tensão elétrica de \textit{offset}.  
 
 \subsection{Curva temporal do pêndulo}
 
@@ -653,21 +655,15 @@ Independente da resistência elétrica dos fios, considerando que a impedância 
 \todo{calcular a incerteza de TODAS medidas}
 
 \section{Sensor de Efeito Hall Linear}
-<<<<<<< HEAD
 Baseada a metodologia mencionada na seção 2.2.1, conecta-se os fios do sensor de efeito Hall com a placa DAQ. Foi verificado que quando aproxima-se um ímã ao sensor, o \textit{LED} virtual que está no painel frontal do LabVIEW acendia. Aproximando e afastando o ímã com o sensor de efeito Hall, foi verificado outro funcionamento interessante: o amplitude da tensão elétrica varia com a frequência de aproximação e afastamento do ímã, ou seja, quando maior for a rapidez essa diferença, a variação da ampiltude
 da tensão elétrica é maior. Note-se também que, se variasse com uma frequência determinada, obtêm-se um sinal do tipo onda quadrada no gráfico da amplitude de tensâo elétrica em função de tempo.
-\section{Módulo Sensor LED}
-Baseada a metodologia mencionada na seção 2.2.2, foi feita a conexão dos fios  entre o sensor \textit{LED} com a placa de aquisição DAQ. Testou-se acionando os botôes que estão no painel frontal do diagrama mostrado na Figura \ref{fig:labview-led}. Dessa forma, foi verifado que o \textit{LED} vermelho acendia como estava esperado. Porém o \textit{LED} amarelo não acionou mesmo com botão do programa de LabVIEW ligado. Depois de algumas verificações do sensor, conclui-se que o \textit{LED} amarelo do sensor estava queimado devido ao uso indevido antes deste experimento.
-
-
-=======
-Com o uso da interface apresentada na Figura \ref{fig:labview-hall}, efetuou-se o teste utilizando-se um ímã de um alto-falante. Verificou-se que o \textit{LED} contido na interface acendia-se com a proximidade do ímã ao Sensor de Efeito Hall. Essa condição coincide com o acendimento de um \textit{LED} contido na placa do módulo utilizado, indicando o seu funcionamento.
 
 \section{Módulo Sensor LED}
-Baseada na metodologia mencioanda na seção 2.2.2, foi feita a conexão dos fios  entre o sensor \textit{LED} e a placa DAQ. Testou-se, acionando os botões que estão no painel do diagrama mostrado na Figura \ref{fig:labview-led}. Dessa forma, foi verifado que o \textit{LED} vermelho acendia, como estava esperado. Porém o \textit{LED} amarelo não acionou, mesmo com botão do programa de LabVIEW ligado. Depois de algumas verificações do sensor, conclui-se que o \textit{LED} amarelo do sensor estava queimado devido ao uso indevido antes deste experimento, já que as tensões nos pinos da DAQ estavam correspondendo corretamente aos comandos dados na interface do LabVIEW.
->>>>>>> origin/master
+Baseada na metodologia mencioanda na seção 2.2.2, foi feita a conexão dos fios  entre o sensor \textit{LED} e a placa DAQ. Testou-se, acionando os botões que estão no painel do diagrama mostrado na Figura \ref{fig:labview-led}. Dessa forma, foi verifado que o \textit{LED} vermelho acendia, como estava esperado. Porém o \textit{LED} amarelo não acionou, mesmo com botão do programa de LabVIEW ligado. Depois de algumas verificações do sensor, conclui-se que o \textit{LED} amarelo do sensor estava queimado devido ao uso indevido antes deste experimento, já que as tensões elétricas nos pinos da DAQ estavam correspondendo corretamente aos comandos dados na interface do LabVIEW.
 
 \chapter{Conclusões}
+
+Após de realizar este experiemento, pode-se concluir que o uso do sensor potenciométrico pode ser utilizado em diversas aplicações, tais como medição do movimento dos braços mecânicos, balança, etc. Uma vez que a resistência elétrica do potenciômetro possui característica linear. Além disso, os sensores de efeito Hall e LED possuem também muitas aplicações nos dia a dia, pois são sensores que apresentam precisões nas medidas.
 
 \iftoggle{attachments}{
 	\chapter*{Anexos}
