--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -48,7 +48,7 @@ Para a atividade do sensor potenciométrico, foi desenvolvido um pêndulo cujo e
 \end{figure}
 
 \noindent
-onde $\theta$ é o ângulo de inclinação do pêndulo em relação a origem (linha tracejada) e $L$ é o comprimento do pêndulo. Para este experimento, foi utilizado o comprimento do pêndulo $L=27.5cm$(centímetro), medido com uma régua da Maped cuja resolução é de $0.1cm$.
+onde $\theta$ é o ângulo de inclinação do pêndulo em relação a origem (linha tracejada), $L$ é o comprimento do pêndulo e $d$ é a altitude do peso suspenso sobre o pêndulo em relação a base. Para este experimento, foi utilizado o comprimento do pêndulo $L=27.5cm$(centímetro), medido com uma régua da Maped cuja resolução é de $0.1cm$.
 
 Este pêndulo pode ser modelado eletricamente pelo circuito da Figura \ref{fig:pendulo-equivalente}:
 
