Corrigido erros ortográficos

--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -659,7 +659,6 @@ As demais componentes contidas entre $0.1 Hz$ e $0.8 Hz$ são responsáveis pelo
 \todo{com os sinais armazenados pelo programa LabVIEW elaborar um procedimento para determinar o decaimento em função do tempo e discutir esse resultado.}
 
 \todo{amortecimento}
-
 \todo{medição do periodo}
 
 \todo{modelo de thevenin}
@@ -670,15 +669,15 @@ As demais componentes contidas entre $0.1 Hz$ e $0.8 Hz$ são responsáveis pelo
 \todo{calcular a incerteza de TODAS medidas}
 
 \section{Sensor de Efeito Hall Linear}
-Baseada a metodologia mencionada na seção 2.2.1, conecta-se os fios do sensor de efeito Hall com a placa DAQ. Foi verificado que quando aproxima-se um ímã ao sensor, o \textit{LED} virtual que está no painel frontal do LabVIEW acendia. Aproximando e afastando o ímã com o sensor de efeito Hall, foi verificado outro funcionamento interessante: o amplitude da tensão elétrica varia com a frequência de aproximação e afastamento do ímã, ou seja, quando maior for a rapidez essa diferença, a variação da ampiltude
-da tensão elétrica é maior. Note-se também que, se variasse com uma frequência determinada, obtêm-se um sinal do tipo onda quadrada no gráfico da amplitude de tensâo elétrica em função de tempo.
+Baseada a metodologia mencionada na seção 2.2.1, conecta-se os fios do sensor de efeito Hall com a placa DAQ. Foi verificado que quando aproxima-se um ímã ao sensor, o \textit{LED} virtual que está no painel frontal do LabVIEW acendia. Aproximando e afastando o ímã com o sensor de efeito Hall, foi verificado outro funcionamento interessante: o amplitude da tensão elétrica varia com a frequência de aproximação e afastamento do ímã, ou seja, quando maior for a rapidez essa diferença, a variação da amplitude
+da tensão elétrica é maior. Note-se também que, se variasse com uma frequência determinada, obtêm-se um sinal do tipo onda quadrada no gráfico da amplitude de tensão elétrica em função de tempo.
 
 \section{Módulo Sensor LED}
-Baseada na metodologia mencioanda na seção 2.2.2, foi feita a conexão dos fios  entre o sensor \textit{LED} e a placa DAQ. Testou-se, acionando os botões que estão no painel do diagrama mostrado na Figura \ref{fig:labview-led}. Dessa forma, foi verifado que o \textit{LED} vermelho acendia, como estava esperado. Porém o \textit{LED} amarelo não acionou, mesmo com botão do programa de LabVIEW ligado. Depois de algumas verificações do sensor, conclui-se que o \textit{LED} amarelo do sensor estava queimado devido ao uso indevido antes deste experimento, já que as tensões elétricas nos pinos da DAQ estavam correspondendo corretamente aos comandos dados na interface do LabVIEW.
+Baseada na metodologia mencionada na seção 2.2.2, foi feita a conexão dos fios  entre o sensor \textit{LED} e a placa DAQ. Testou-se, acionando os botões que estão no painel do diagrama mostrado na Figura \ref{fig:labview-led}. Dessa forma, foi verificado que o \textit{LED} vermelho acendia, como estava esperado. Porém o \textit{LED} amarelo não acionou, mesmo com botão do programa de LabVIEW ligado. Depois de algumas verificações do sensor, conclui-se que o \textit{LED} amarelo do sensor estava queimado devido ao uso indevido antes deste experimento, já que as tensões elétricas nos pinos da DAQ estavam correspondendo corretamente aos comandos dados na interface do LabVIEW.
 
 \chapter{Conclusões}
 
-Após de realizar este experiemento, pode-se concluir que o uso do sensor potenciométrico pode ser utilizado em diversas aplicações, tais como medição do movimento dos braços mecânicos, balança, etc. Uma vez que a resistência elétrica do potenciômetro possui característica linear. Além disso, os sensores de efeito Hall e LED possuem também muitas aplicações nos dia a dia, pois são sensores que apresentam precisões nas medidas, principalmente a resposta rápida destes sensores.
+Após de realizar este experimento, pode-se concluir que o uso do sensor potenciométrico pode ser utilizado em diversas aplicações, tais como medição do movimento dos braços mecânicos, balança, etc. Uma vez que a resistência elétrica do potenciômetro possui característica linear. Além disso, os sensores de efeito Hall e LED possuem também muitas aplicações nos dia a dia, pois são sensores que apresentam precisões nas medidas, principalmente a resposta rápida destes sensores.
 
 \iftoggle{attachments}{
 	\chapter*{Anexos}
