--- a/Relatório/instrumentacao.cls
+++ b/Relatório/instrumentacao.cls
@@ -80,13 +80,22 @@
 
 
 % Attachments
-\newcommand{\includenotebook}[2]{
+\newcommand{\includenotebook}[3]{
 	\includepdf[pages={1},pagecommand={
 		\pagestyle{fancy}
 		\subsection{#2}
+		\label{att:#3}
 	}]{#1}
 	\includepdf[pages={2-},pagecommand={
 		\pagestyle{fancy}
+	}]{#1}
+}
+
+\newcommand{\includenotebooksingle}[3]{
+	\includepdf[pages={1}, pagecommand={
+		\pagestyle{fancy}
+		\subsection{#2}
+		\label{att:#3}
 	}]{#1}
 }
 
@@ -171,15 +180,19 @@
 
 \hrule \vspace{1em}
 
+\end{flushleft}
+
 \begin{adjustwidth}{1cm}{}
-\textbf{Resumo}: \noindent \theresume
+\noindent
+\textbf{Resumo}: \theresume
 \vspace{1.5em}
-\textbf{Abstract}: \noindent \theabstract
+
+\noindent\textbf{Abstract}: \theabstract
 \vspace{1.5em}
-\textbf{Palavras Chaves}: \thekeywords
+
+\noindent\textbf{Palavras Chaves}: \thekeywords
 
 \vspace{1em} \hrule
 \end{adjustwidth}
-\end{flushleft}
 \end{titlepage}
 }
