--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -672,7 +672,6 @@ Na Figura \ref{fig:pendulo-frequencia-truncado}, é possível observar a compone
 
 As demais componentes contidas entre $0.1 Hz$ e $0.8 Hz$ são responsáveis pelo efeito de amortecimento do pêndulo.
 
-<<<<<<< HEAD
 \subsection{Caracterização do Sistema}
 Conforme apresentado na Equação \ref{eq:pendulo-tf-sem-cond}, foi levantada a função de transferência experimental do ensaio do pêndulo sem condicionamento. Assim, é possível determinar a sensibilidade do sistema, que é a derivada da saída em relação à entrada, conforme a Equação \ref{eq:pendulo-sensibilidade}.
 
@@ -681,7 +680,7 @@ Conforme apresentado na Equação \ref{eq:pendulo-tf-sem-cond}, foi levantada a 
 	\label{eq:pendulo-sensibilidade}
 \end{equation}
 
-A resolução de entrada é a menor variação no sinal de entrada que resultará numa variação mensurável na saída.  Esta resolução, pelo experimento realizado, depende muito do equipamento utilizado para mensurar o valor de entrada.
+A resolução de entrada é a menor variação no sinal de entrada que resultará numa variação mensurável na saída.  Esta resolução, pelo experimento realizado, depende muito do equipamento utilizado para mensurar o valor de entrada. No caso do experimento realizado, foi adaptado um transferidor centrado no eixo do potenciômetro do pêndulo. Esse transferidor tinha uma resolução de 1º. Assim, com a movimentação do eixo do pêndulo para um dos lados, foi possível determinar, visualmente, um grau correspondente à inclinação. No experimento, as medidas foram feitas a cada 10º, em um \textit{range} de -90º a 90º. A cada variação de 10º na entrada, a saída do sistema varia, de acordo com a Equação \ref{eq:pendulo-tf-sem-cond}, $0.28V$.
 
 
 \subsection{Medição a 3 fios}
